- changed the about me, added text - fixed the alignment of the pagination -changed the font size on the registration page

--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -29,6 +29,7 @@
 }
 .LoginCreateAccount p {
   width: 32em;
+  font-size: medium;
 }
 .create {
   width: 43%;
