--- a/src/style/Pagination.css
+++ b/src/style/Pagination.css
@@ -4,10 +4,11 @@
   font-size: 2em;
   width: 60px;
   height: 60px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-content: center;
-  padding: 5px;
+ line-height: 50px;
   cursor: pointer;
   margin-bottom: 30px;
   font-family: 'Playfair Display', serif;
